# boids

./: Cargo.toml  Dockerfile  README.md
src/: boid.rs  lib.rs  main.rs  vector.rs
