[package]
name = "dcc-boids"
version = "0.1.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "A boids simulation."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-boids"

[dependencies]
gifski = "0.10"
tempfile = "3.1"
image = "0.23"
imageproc = "0.20"
rand = "0.7"
ggez = "0.5"